# mycppproject

./: JenkinsFile  Jenkinsfile  README.md  premake5.lua
CppProject/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp_project
CppProject/include/: database_connect.h  db_connect.h  include_all_headers.h
CppProject/src/: cpp_project.cc  database_connect.cc  operator_overloading.cc
CppProject/test/: CMakeLists.txt  unittest_dbconnect.cc
HelloWorld/src/: HelloWorld.cpp
scripts/: Linux-Build.sh  Linux-Run.sh
